--- a/src/app/pages/transport-lines/transport-line-main/transport-line-main.component.html
+++ b/src/app/pages/transport-lines/transport-line-main/transport-line-main.component.html
@@ -1,6 +1,9 @@
 <div class="col-md-12">
 
-  <nb-card>
+  <nb-card accent="primary"  [nbSpinner]="loading"
+  nbSpinnerStatus="danger"
+  nbSpinnerSize="large"
+  nbSpinnerMessage="Cargando ...">
       <nb-card-header>{{titulo}} </nb-card-header>
       <nb-card-body>
           <section>
@@ -25,10 +28,14 @@
 
                       <!-- Name Column -->
                       <ng-container matColumnDef="name">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header> CLIENTE </th>
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header> LINEA DE TRASPORTE </th>
                           <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                       </ng-container>
 
+                      <ng-container matColumnDef="client">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> CLIENTE </th>
+                        <td mat-cell *matCellDef="let element"> {{element.partner.name}} </td>
+                    </ng-container>
                       <!-- isActive Column -->
                       <ng-container matColumnDef="isActive">
                           <th mat-header-cell *matHeaderCellDef mat-sort-header> ACTIVO </th>
