--- a/src/app/pages/check-list/check-list-main/check-list-main.component.html
+++ b/src/app/pages/check-list/check-list-main/check-list-main.component.html
@@ -37,11 +37,6 @@
               <td mat-cell *matCellDef="let element"> {{element.hours}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="partner">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header > CLIENTE </th>
-              <td mat-cell *matCellDef="let element"> {{element.partner.name}} </td>
-            </ng-container>
-
             <ng-container matColumnDef="transportLine">
               <th mat-header-cell *matHeaderCellDef mat-sort-header >LINEA TRANSPORTE </th>
               <td mat-cell *matCellDef="let element"> {{element.transportLine.name}} </td>
@@ -62,14 +57,16 @@
               <td mat-cell *matCellDef="let element"> {{element.noSello}} </td>
             </ng-container>
 
-
-
-
-            <ng-container matColumnDef="noRampa">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header >NO. RAMPA </th>
-              <td mat-cell *matCellDef="let element"> {{element.noRampa}} </td>
+            <ng-container matColumnDef="pallets">
+              <th mat-header-cell *matHeaderCellDef > PALLETS </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-icon-button color="primary" (click)="addPallet(element)" [disabled]="element.isActive === false">
+                  <mat-icon><span class="material-symbols-outlined">
+                    switch_access_shortcut_add
+                    </span></mat-icon>
+                </button>
+              </td>
             </ng-container>
-
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef > ACCIONES </th>
               <td mat-cell *matCellDef="let element">
@@ -78,6 +75,7 @@
                 <button mat-icon-button color="warn" (click)="deleteClient(element)" [disabled]="element.isActive === false">
                   <mat-icon>delete</mat-icon>
                 </button>
+
               </td>
             </ng-container>
 
