--- a/src/app/pages/transport-lines/transport-line-create/transport-line-create.component.html
+++ b/src/app/pages/transport-lines/transport-line-create/transport-line-create.component.html
@@ -1,7 +1,7 @@
 <section>
   <form [formGroup]="transportLineForm" (ngSubmit)="onSubmit()">
   <mat-card >
-    <mat-card-title>{{titulo}}</mat-card-title>
+    <mat-card-title>{{titulo}} {{clientHead}}</mat-card-title>
     <mat-card-content>
       <!--mat dialog content-->
       <mat-dialog-content >
