--- a/src/app/pages/clients/client-main/client-main.component.html
+++ b/src/app/pages/clients/client-main/client-main.component.html
@@ -16,12 +16,6 @@
         <!-- end filter -->
         <div class="mat-elevation-z8">
           <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
-            <!-- Id Column -->
-            <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header > ID </th>
-              <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-            </ng-container>
-
             <!-- Name Column -->
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef mat-sort-header > CLIENTE </th>
@@ -31,18 +25,20 @@
             <ng-container matColumnDef="direccion">
               <th mat-header-cell *matHeaderCellDef  mat-sort-header> DIRECCION </th>
               <td mat-cell *matCellDef="let element">
-                <p align='left'>
+
                 {{element.address.text}},{{element.address.colonia}},{{element.address.district}},{{element.address.state}},{{element.address.city}},{{element.address.postalCode}},
                 {{element.address.country}}
-              </p>
+
               </td>
             </ng-container>
             <!-- isActive Column -->
             <ng-container matColumnDef="isActive">
-              <th mat-header-cell *matHeaderCellDef  mat-sort-header> ACTIVO </th>
+              <th mat-header-cell *matHeaderCellDef> ACTIVO </th>
               <td mat-cell *matCellDef="let element">
-              <mat-chip color="primary" selected *ngIf="element.isActive">Activo</mat-chip>
-              <mat-chip color="warn" selected *ngIf="!element.isActive">Inactivo</mat-chip>
+                <nb-tag-list>
+                   <nb-tag status="primary" appearance="outline" *ngIf="element.isActive" text="Activo"></nb-tag>
+                <nb-tag status="warning" appearance="outline" *ngIf="!element.isActive" text="Inactivo"></nb-tag>
+              </nb-tag-list>
               </td>
             </ng-container>
 
