--- a/src/app/pages/clients/client-main/client-main.component.scss
+++ b/src/app/pages/clients/client-main/client-main.component.scss
@@ -8,10 +8,10 @@ table {
 }
 
 td, th {
-  width: 5%;
+  width: 15%;
 }
 button {
-  margin-right: 8px;
+  margin-right: 5px;
 }
 .example-card {
   max-width: 50%;
@@ -22,7 +22,7 @@ mat-grid-tile {
 }
 
 .example-container .mat-form-field + .mat-form-field {
-  margin-left: 8px;
+  margin-left: 5px;
 }
 
 .example-container .mat-form-field {
@@ -40,12 +40,7 @@ mat-grid-tile {
 .example-container .mat-radio-button {
   margin: 0 12px;
 }
-.mat-column-Id {
-  flex: 0 0 10%;
-}
-.mat-column-direccion {
-  flex: 0 0 50%;
-}
+
 .example-loading-shade {
   position: absolute;
   top: 0;
@@ -62,4 +57,63 @@ mat-grid-tile {
 .example-rate-limit-reached {
   max-width: 360px;
   text-align: center;
+}
+.mat-column-direccion {
+  word-wrap: break-word !important;
+  white-space: unset !important;
+  flex: 0 0 35% !important;
+  width: 35% !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+.mat-column-name {
+  word-wrap: break-word !important;
+  white-space: unset !important;
+  flex: 0 0 12% !important;
+  width: 12% !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  word-break: break-word;
+
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
+.mat-column-actions {
+  word-wrap: break-word !important;
+  white-space: unset !important;
+  flex: 0 0 6% !important;
+  width: 6% !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  word-break: break-word;
+
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+.mat-column-isActive {
+  word-wrap: break-word !important;
+  white-space: unset !important;
+  flex: 0 0 6% !important;
+  width: 6% !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  word-break: break-word;
+
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
