--- a/src/app/pages/transport-lines/transport-line-main/transport-line-main.component.html
+++ b/src/app/pages/transport-lines/transport-line-main/transport-line-main.component.html
@@ -21,10 +21,7 @@
               <div class="mat-elevation-z8">
                   <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
                       <!-- Id Column -->
-                      <ng-container matColumnDef="id">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-                      </ng-container>
+
 
                       <!-- Name Column -->
                       <ng-container matColumnDef="name">
@@ -32,19 +29,15 @@
                           <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                       </ng-container>
 
-                      <ng-container matColumnDef="client">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> CLIENTE </th>
-                        <td mat-cell *matCellDef="let element"> {{element.partner.name}} </td>
-                    </ng-container>
-                      <!-- isActive Column -->
                       <ng-container matColumnDef="isActive">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header> ACTIVO </th>
-                          <td mat-cell *matCellDef="let element">
-                              <mat-chip color="primary" selected *ngIf="element.isActive">Activo</mat-chip>
-                              <mat-chip color="warn" selected *ngIf="!element.isActive">Inactivo</mat-chip>
-                          </td>
+                        <th mat-header-cell *matHeaderCellDef> ESTATUS </th>
+                        <td mat-cell *matCellDef="let element">
+                          <nb-tag-list>
+                             <nb-tag status="primary" appearance="outline" *ngIf="element.isActive" text="Activo"></nb-tag>
+                          <nb-tag status="warning" appearance="outline" *ngIf="!element.isActive" text="Inactivo"></nb-tag>
+                        </nb-tag-list>
+                        </td>
                       </ng-container>
-
                       <!-- isActive Column -->
                       <ng-container matColumnDef="actions">
                           <th mat-header-cell *matHeaderCellDef> ACCIONES </th>
