--- a/src/app/pages/transport-lines/transport-line-main/transport-line-main.component.scss
+++ b/src/app/pages/transport-lines/transport-line-main/transport-line-main.component.scss
@@ -8,10 +8,10 @@ table {
 }
 
 td, th {
-  width: 25%;
+  width: 15%;
 }
 button {
-  margin-right: 8px;
+  margin-right: 5px;
 }
 .example-card {
   max-width: 50%;
@@ -22,7 +22,7 @@ mat-grid-tile {
 }
 
 .example-container .mat-form-field + .mat-form-field {
-  margin-left: 8px;
+  margin-left: 5px;
 }
 
 .example-container .mat-form-field {
@@ -39,4 +39,69 @@ mat-grid-tile {
 
 .example-container .mat-radio-button {
   margin: 0 12px;
+}
+
+.example-loading-shade {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 56px;
+  right: 0;
+  background: rgba(0, 0, 0, 0.15);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.example-rate-limit-reached {
+  max-width: 360px;
+  text-align: center;
+}
+
+.mat-column-name {
+  word-wrap: break-word !important;
+  white-space: unset !important;
+  flex: 0 0 12% !important;
+  width: 12% !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  word-break: break-word;
+
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
+.mat-column-actions {
+  word-wrap: break-word !important;
+  white-space: unset !important;
+  flex: 0 0 6% !important;
+  width: 6% !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  word-break: break-word;
+
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+.mat-column-isActive {
+  word-wrap: break-word !important;
+  white-space: unset !important;
+  flex: 0 0 6% !important;
+  width: 6% !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  word-break: break-word;
+
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
