--- a/src/app/pages/transport-types/transport-type-main/transport-type-main.component.html
+++ b/src/app/pages/transport-types/transport-type-main/transport-type-main.component.html
@@ -30,13 +30,10 @@
                       </ng-container>
 
                       <ng-container matColumnDef="capacities">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>MEDIDAS</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>CAPACIDADES</th>
                         <td mat-cell *matCellDef="let element">
-                          <button mat-icon-button color="primary">
-                            <mat-icon>add</mat-icon>
-                        </button>
-                        <button mat-icon-button color="primary" (click)="showCapacities(element)">
-                          <mat-icon>list</mat-icon>
+                        <button  mat-icon-button color="primary" (click)="showCapacities(element)">
+                          <mat-icon>list</mat-icon> capacidades
                       </button>
                         </td>
                     </ng-container>
