--- a/src/app/pages/persons/persons-main/persons-main.component.html
+++ b/src/app/pages/persons/persons-main/persons-main.component.html
@@ -17,30 +17,25 @@
                 <!-- end filter -->
                 <div class="mat-elevation-z8">
                     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
-                        <!-- Id Column -->
-                        <ng-container matColumnDef="id">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
-                            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-                        </ng-container>
                         <ng-container matColumnDef="firstName">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE </th>
                             <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
                         </ng-container>
                         <ng-container matColumnDef="additionalName">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Segundo nombre </th>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> SEGUNDO NOMBRE </th>
                             <td mat-cell *matCellDef="let element"> {{element.additionalName}} </td>
                         </ng-container>
                         <ng-container matColumnDef="lastName">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Apellido paterno </th>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> APELLIDO PATERNO </th>
                             <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
                         </ng-container>
                         <ng-container matColumnDef="secondName">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Apellido materno </th>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> APELLIDO MATERNO </th>
                             <td mat-cell *matCellDef="let element"> {{element.secondName}} </td>
                         </ng-container>
                         <!-- isActive Column -->
                         <ng-container matColumnDef="isActive">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estatus </th>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> ESTATUS </th>
                             <td mat-cell *matCellDef="let element">
                                 <mat-chip color="primary" selected *ngIf="element.isActive">Activo</mat-chip>
                                 <mat-chip color="warn" selected *ngIf="!element.isActive">Inactivo</mat-chip>
@@ -48,7 +43,7 @@
                         </ng-container>
                         <!-- isActive Column -->
                         <ng-container matColumnDef="actions">
-                            <th mat-header-cell *matHeaderCellDef> actions </th>
+                            <th mat-header-cell *matHeaderCellDef> ACCIONES </th>
                             <td mat-cell *matCellDef="let element">
                                 <button mat-icon-button color="primary" (click)="editarClient(element)">
                                     <mat-icon>edit</mat-icon>
