--- a/src/app/pages/users/users-main/users-main.component.html
+++ b/src/app/pages/users/users-main/users-main.component.html
@@ -18,31 +18,37 @@
                     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
                         <!-- Id Column -->
                         <ng-container matColumnDef="id">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
                             <td mat-cell *matCellDef="let element"> {{element.id}} </td>
                         </ng-container>
                         <!-- name Column -->
                         <ng-container matColumnDef="firstName">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE </th>
                             <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
                         </ng-container>
                         <ng-container matColumnDef="additionalName">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Segundo Nombre </th>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> SEGUNDO NOMBRE </th>
                             <td mat-cell *matCellDef="let element"> {{element.additionalName}} </td>
                         </ng-container>
 
                         <!-- isActive Column -->
                         <ng-container matColumnDef="isActive">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Activo </th>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> ESTATUS </th>
                             <td mat-cell *matCellDef="let element">
                                 <mat-chip color="primary" selected *ngIf="element.isActive">Activo</mat-chip>
                                 <mat-chip color="warn" selected *ngIf="!element.isActive">Inactivo</mat-chip>
                             </td>
                         </ng-container>
-
+                        <ng-container matColumnDef="isResponsible">
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header> RESPONSABLE </th>
+                          <td mat-cell *matCellDef="let element">
+                              <mat-chip color="primary" selected *ngIf="element.isResponsible">Activo</mat-chip>
+                              <mat-chip color="warn" selected *ngIf="!element.isResponsible">Inactivo</mat-chip>
+                          </td>
+                      </ng-container>
                         <!-- isActive Column -->
                         <ng-container matColumnDef="actions">
-                            <th mat-header-cell *matHeaderCellDef> actions </th>
+                            <th mat-header-cell *matHeaderCellDef> ACCIONES </th>
                             <td mat-cell *matCellDef="let element">
                                 <button mat-icon-button color="primary" (click)="editarClient(element)">
                                     <mat-icon>edit</mat-icon>
