--- a/src/app/pages/users/users-profile/users-profile.component.html
+++ b/src/app/pages/users/users-profile/users-profile.component.html
@@ -4,7 +4,7 @@
         nbSpinnerStatus="danger"
         nbSpinnerSize="large"
         nbSpinnerMessage="Cargando ...">
-            <mat-card-title>{{titulo}}</mat-card-title>
+            <mat-card-title>{{titulo}} {{email}}</mat-card-title>
             <mat-card-content nb-card-body>
                 <!--mat dialog content-->
                 <mat-dialog-content>
