:lipstick: added accent

--- a/src/app/pages/check-list/check-list-main/check-list-main.component.html
+++ b/src/app/pages/check-list/check-list-main/check-list-main.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-  <nb-card>
+  <nb-card accent="primary">
     <nb-card-header>Check List </nb-card-header>
     <nb-card-body>
       <section>
