--- a/src/app/pages/clients/client-create/client-create.component.html
+++ b/src/app/pages/clients/client-create/client-create.component.html
@@ -1,7 +1,7 @@
 <section>
   <form [formGroup]="clientForm" (ngSubmit)="onSubmit()">
   <mat-card>
-    <mat-card-title>Agregar Cliente</mat-card-title>
+    <mat-card-title>Cliente</mat-card-title>
     <mat-card-content>
       <!--mat dialog content-->
       <mat-dialog-content >
