--- a/src/app/pages/persons/persons-create/persons-create.component.html
+++ b/src/app/pages/persons/persons-create/persons-create.component.html
@@ -1,7 +1,7 @@
 <section>
   <form [formGroup]="PersonForm" (ngSubmit)="onSubmit()">
     <mat-card>
-      <mat-card-title>Agregar Personal</mat-card-title>
+      <mat-card-title>Personal</mat-card-title>
       <mat-card-content>
         <!--mat dialog content-->
         <mat-dialog-content>
