--- a/src/app/pages/users/users-main/users-main.component.html
+++ b/src/app/pages/users/users-main/users-main.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-    <nb-card>
+    <nb-card accent="primary">
         <nb-card-header>{{titulo}} </nb-card-header>
         <nb-card-body>
             <section>
@@ -35,15 +35,20 @@
                         <ng-container matColumnDef="isActive">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> ESTATUS </th>
                             <td mat-cell *matCellDef="let element">
-                                <mat-chip color="primary" selected *ngIf="element.isActive">Activo</mat-chip>
-                                <mat-chip color="warn" selected *ngIf="!element.isActive">Inactivo</mat-chip>
+                              <nb-tag-list>
+                                <nb-tag status="primary" appearance="outline" *ngIf="element.isActive" text="Activo"></nb-tag>
+                                <nb-tag status="warning" appearance="outline" *ngIf="!element.isActive" text="Inactivo"></nb-tag>
+                              </nb-tag-list>
                             </td>
                         </ng-container>
                         <ng-container matColumnDef="isResponsible">
                           <th mat-header-cell *matHeaderCellDef mat-sort-header> RESPONSABLE </th>
                           <td mat-cell *matCellDef="let element">
-                              <mat-chip color="primary" selected *ngIf="element.isResponsible">Activo</mat-chip>
-                              <mat-chip color="warn" selected *ngIf="!element.isResponsible">Inactivo</mat-chip>
+
+                              <nb-tag-list>
+                                <nb-tag status="primary" appearance="outline" *ngIf="element.isResponsible" text="Activo"></nb-tag>
+                                <nb-tag status="warning" appearance="outline" *ngIf="!element.isResponsible" text="Inactivo"></nb-tag>
+                              </nb-tag-list>
                           </td>
                       </ng-container>
                         <!-- isActive Column -->
