--- a/src/app/pages/professions/profession-create/profession-create.component.html
+++ b/src/app/pages/professions/profession-create/profession-create.component.html
@@ -1,48 +1,48 @@
 <section>
     <form [formGroup]="professionForm" (ngSubmit)="onSubmit()">
     <mat-card>
-      <mat-card-title>Agregar profesion</mat-card-title>
+      <mat-card-title>Profesion</mat-card-title>
       <mat-card-content>
         <!--mat dialog content-->
         <mat-dialog-content >
-  
+
         <!-- grid -->
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-sm-12">
             <div class="form-group">
               <mat-form-field appearance="legacy">
-                <mat-label>Cliente</mat-label>
-                <input matInput  formControlName="name" placeholder="Digita Cliente" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+                <mat-label>Puesto</mat-label>
+                <input matInput  formControlName="name" placeholder="Digita Puesto" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
                 <mat-error *ngIf="submitted && f.name.errors" >Campo Requerido</mat-error>
               </mat-form-field>
             </div>
           </div>
         </div>
-      
-  
-        <div class="row">  
-          <div class="col-sm-4">
+
+
+        <div class="row">
+          <div class="col-sm-12">
             <div class="form-group">
-              <mat-form-field #field floatLabel="always" appearance="outline" class="radio-container">
-                <mat-label>Activo</mat-label>
+              <mat-form-field #field floatLabel="always" appearance="legacy" >
+                <mat-label>Estatus</mat-label>
                 <input matInput hidden formControlName="isActive">
                 <mat-radio-group  class="flex-wrap" formControlName="isActive" [ngClass]="{ 'is-invalid': submitted && f.isActive.errors }">
                   <mat-radio-button  class="radio-button" [value]="true"  [checked]="isChecked===true">Activo</mat-radio-button>
                   <mat-radio-button  class="radio-button" [value]="false" [checked]="isChecked===false">Inactivo</mat-radio-button>
                 </mat-radio-group>
-                <mat-error>Campo Requerio</mat-error>
+                <mat-error>Estatus Requerio</mat-error>
               </mat-form-field>
             </div>
           </div>
-  
+
         </div>
         <!-- end grid-->
-  
+
         </mat-dialog-content>
         <!-- mat dialog content -->
-  
+
       </mat-card-content>
-  
+
       <!-- actions -->
       <mat-card-actions align="end">
         <mat-dialog-actions align="end">
@@ -54,4 +54,3 @@
     </mat-card>
   </form>
     </section>
-  
