--- a/src/app/@theme/components/header/header.component.scss
+++ b/src/app/@theme/components/header/header.component.scss
@@ -67,6 +67,15 @@
       display: none;
     }
   }
+  .example-form {
+    min-width: 220px;
+    max-width: 500px;
+    height: 200;
+    width: 100%;
+  }
 
+  .example-full-width {
+    width: 100%;
+  }
 
 }
