--- a/src/app/pages/transport-lines/transport-line-main/transport-line-main.component.html
+++ b/src/app/pages/transport-lines/transport-line-main/transport-line-main.component.html
@@ -1,9 +1,6 @@
 <div class="col-md-12">
 
-  <nb-card accent="primary"  [nbSpinner]="loading"
-  nbSpinnerStatus="danger"
-  nbSpinnerSize="large"
-  nbSpinnerMessage="Cargando ...">
+  <nb-card accent="primary">
       <nb-card-header>{{titulo}} </nb-card-header>
       <nb-card-body>
           <section>
