--- a/src/app/pages/persons/persons-main/persons-main.component.html
+++ b/src/app/pages/persons/persons-main/persons-main.component.html
@@ -33,6 +33,10 @@
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> APELLIDO MATERNO </th>
                             <td mat-cell *matCellDef="let element"> {{element.secondName}} </td>
                         </ng-container>
+                        <ng-container matColumnDef="profession">
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header> PUESTO</th>
+                          <td mat-cell *matCellDef="let element"> {{element.profession.name}} </td>
+                      </ng-container>
                         <!-- isActive Column -->
                         <ng-container matColumnDef="isActive">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> ESTATUS </th>
