--- a/src/app/pages/product/product-create/product-create.component.html
+++ b/src/app/pages/product/product-create/product-create.component.html
@@ -12,7 +12,7 @@
         <div class="col-sm-12">
           <div class="form-group">
             <mat-form-field appearance="legacy">
-              <mat-label>Product</mat-label>
+              <mat-label>Producto</mat-label>
               <input matInput  formControlName="name" placeholder="Digita linea de transporte" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
               <mat-error *ngIf="submitted && f.name.errors" >Campo Requerido</mat-error>
             </mat-form-field>
