--- a/src/app/pages/users/users-main/users-main.component.html
+++ b/src/app/pages/users/users-main/users-main.component.html
@@ -21,6 +21,10 @@
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
                             <td mat-cell *matCellDef="let element"> {{element.id}} </td>
                         </ng-container>
+                        <ng-container matColumnDef="username">
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                          <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+                      </ng-container>
                         <!-- name Column -->
                         <ng-container matColumnDef="firstName">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE </th>
