--- a/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.html
+++ b/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.html
@@ -187,10 +187,11 @@
               <div class="col-sm-10">
               </div>
 
-              <div class="col-sm-2">
+
+            </div>
+                  <div class="col-sm-2">
                 <button mat-flat-button color="primary" type="submit" (click)="submit()">Guardar</button>
               </div>
-            </div>
             <!-- end grid-->
           </nb-card-body>
         </nb-card>
@@ -253,9 +254,9 @@
                 <ng-container matColumnDef="actions">
                   <th mat-header-cell *matHeaderCellDef > ACCIONES </th>
                   <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button color="primary" ><mat-icon>edit</mat-icon>
+                    <button mat-icon-button color="primary" (click)="editDialog(element)"><mat-icon>edit</mat-icon>
                     </button>
-                    <button mat-icon-button color="warn">
+                    <button mat-icon-button color="warn" (click)="deleteDialog(element)">
                       <mat-icon>delete</mat-icon>
                     </button>
                   </td>
